chore: redo styling with tailwind

--- a/apps/website/mfe/src/assets/i18n/en.json
+++ b/apps/website/mfe/src/assets/i18n/en.json
@@ -137,8 +137,8 @@
       "LINK": "Learn more"
     },
     "WHY_CFF": {
-      "TITLE": "Get your space transformed from mess to",
-      "GRADIENT": "yess!",
+      "TITLE": "Get your space transformed",
+      "GRADIENT": "from mess to yess!",
       "DESCRIPTION": "We're your trusted professional organizing service, dedicated to helping professionals and families across Kenya streamline their lives for enhanced productivity. Experience un-mess-erable transformations with us, as we create organized and functional spaces that uplift your daily life.",
       "BUTTON_1": "Get an instant quote",
       "BUTTON_2": "Book a call"
@@ -161,7 +161,7 @@
         },
         "ITEM_4": {
           "TITLE": "Transform",
-          "DESCRIPTION": "When you're ready get your space organized, sit back and watch as your space transforms"
+          "DESCRIPTION": "Get ready to get your space organized, from mess to YESS!"
         }
       },
       "INTAKE_FORM": {
