chore: update office and shop

--- a/apps/website/mfe/src/assets/i18n/en.json
+++ b/apps/website/mfe/src/assets/i18n/en.json
@@ -279,7 +279,7 @@
         "CONTENT": "Contact Us"
       },
       "LOCATION": {
-        "TITLE": "Ngong Office",
+        "TITLE": "Nairobi Office",
         "CONTENT": "Leave us a Review"
       }
     },
@@ -488,7 +488,7 @@
     "HERO_SECTION": {
       "TITLE": "Service Agreement for Clutter Free Finds",
       "DESCRIPTION1": "Organized By Clutter Free Finds",
-      "DESCRIPTION2": "P.O. Box 1092 | Ngong Hills, Kajiado 00208",
+      "DESCRIPTION2": "Nairobi, KE",
       "DESCRIPTION3": "+254 (706) 347399 | clutterfreefinds@gmail.com"
     },
     "CONTENT_SECTION": {
