--- a/apps/website/mfe/src/assets/i18n/sw.json
+++ b/apps/website/mfe/src/assets/i18n/sw.json
@@ -202,7 +202,7 @@
         "CONTENT": "Wasiliana nasi"
       },
       "LOCATION": {
-        "TITLE": "Ofisi ya Ngong",
+        "TITLE": "Ofisi ya Nairobi",
         "CONTENT": "Tuachie Uhakiki"
       }
     },
