refine some code

--- a/apps/website/mfe/src/assets/i18n/en.json
+++ b/apps/website/mfe/src/assets/i18n/en.json
@@ -4,10 +4,10 @@
   },
   "HOME_PAGE": {
     "HERO_SECTION": {
-      "TITLE": "Organize from",
+      "TITLE": "You're not alone",
       "GRADIENT": "mess to yess!",
-      "DESCRIPTION": "Kenyan's Ultimate Organizer for Busy Professionals and Families looking to create organized and functional spaces that",
-      "EMPHASIS": "simplify their daily life.",
+      "DESCRIPTION": "Our Mission: 1 Cor 14:40: Let all things be done decently and in order.",
+      "EMPHASIS": "We've got the MESS covered.",
       "BUTTON_1": "Get A Free Quote",
       "BUTTON_2": "Book a consultation",
       "LIST": {
